Mon Sep 11 11:21:27 BST 2000 Olly Betts

	* Fixed compiler warning in string_to_ommsetitems in non-debug builds.
 
Mon Sep 11 10:28:43 BST 2000 Olly Betts

	* Test suite now exercises flimsy version of da backend, and both
	  heavy duty and flimsy versions of db backend.
 
Fri Sep  8 20:10:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problem with OmPostListIterator's internals not being reference
	  counted, and copy still being allowed; internals are refcnt again,
	  and copy and assignment operations are fully defined.
	  OmTermListIterators and OmPositionListIterators are still broken.

Fri Sep  8 18:42:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In delve, ensure that recno's are in sorted order.

Fri Sep  8 18:41:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In MultiPostList::skip_to(), don't call get_docid() if already
	  at_end().

Fri Sep  8 17:31:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change implementation of DBPostList::skip_to to repeatedly call
	  next(), as temporary work around for a bug.

Fri Sep 08 16:41:17 BST 2000 Olly Betts

	* Om*Iterator ought to now work as STL iterators; added test termlist2
	  for this - but it currently fails so is disabled.

	* Martin has fixed problem in makeDA so termlist1 now passes with da
	  backend.

Fri Sep  8 16:34:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Delve can now display several termlists, several postlists, or
	  lots of positionlists.

Fri Sep  8 12:02:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix Asserts in MultiPostList::skip_to(), and small bug in
	  MultiPostList::next();

	* debugging info to DBDatabase::skip_to().

	* delve now displays lists of docids or terms one per line, for easier
	  post-processing.

Fri Sep 08 11:02:53 BST 2000 Olly Betts

	* Reenabled termlist1 for DA backend so Martin can investigate bug.
 
Fri Sep 08 10:44:53 BST 2000 Olly Betts
